--- a/popup.html
+++ b/popup.html
@@ -1,46 +1,63 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>TrustCall</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell; padding: 14px; width: 320px; }
-      h1 { font-size: 16px; margin: 0 0 10px; }
-      .row { display: flex; justify-content: space-between; align-items: center; margin: 8px 0; }
-      .hint { font-size: 12px; color: #555; }
-      button { padding: 8px 10px; border-radius: 8px; border: 1px solid #ddd; cursor: pointer; }
-      input[type="range"] { width: 100%; }
-      label { user-select: none; }
-    </style>
-  </head>
-  <body>
-    <h1>TrustCall Controls</h1>
-
-    <div class="row">
-      <label><input id="enabled" type="checkbox"> Enable on this browser</label>
+<head>
+  <meta charset="utf-8" />
+  <title>TrustCall</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root{ color-scheme: dark; }
+    body{ margin:0; font:14px/1.35 system-ui, -apple-system, Segoe UI, Roboto; background:#0b1222; color:#dbeafe; }
+    .wrap{ width:280px; padding:14px; display:grid; gap:12px; }
+    .brand{ display:flex; align-items:center; gap:10px; }
+    .logo{ font-size:18px; }
+    h1{ font-size:16px; margin:0; }
+    .sub{ margin:0; opacity:.75; font-size:12px; }
+    .card{ background:linear-gradient(180deg,#0f1730,#0b1222);
+           border:1px solid #1f2a44; border-radius:14px; padding:12px; }
+    .row{ display:flex; align-items:center; justify-content:space-between; gap:10px; }
+    .btn{ cursor:pointer; padding:8px 10px; border-radius:10px; border:1px solid #2b3a60;
+          background:linear-gradient(180deg,rgba(255,255,255,0.12),rgba(255,255,255,0.05));
+          color:#0b1326; font-weight:800; }
+    .btn.ghost{ background:transparent; color:#dbeafe; }
+    /* iOS-like switch */
+    .switch{ position:relative; width:56px; height:30px; background:#25314f; border-radius:999px; border:1px solid #2b3a60; transition:.2s; }
+    .switch.on{ background:#22c55e; }
+    .knob{ position:absolute; top:2px; left:2px; width:26px; height:26px; background:#fff; border-radius:50%; transition:.2s; }
+    .switch.on .knob{ left:28px; }
+    .muted{ opacity:.8; font-size:12px; }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="brand">
+      <div class="logo">🛡️</div>
+      <div>
+        <h1>TrustCall</h1>
+        <p class="sub">Deepfake risk badges</p>
+      </div>
     </div>
 
-    <div class="row">
-      <label><input id="demomode" type="checkbox"> Demo Mode (synthetic stress test)</label>
+    <div class="card">
+      <div class="row">
+        <div>
+          <div>Protection</div>
+          <div class="muted" id="stateText">Enabled</div>
+        </div>
+        <div id="toggle" class="switch"><div class="knob"></div></div>
+      </div>
     </div>
 
-    <div class="row" style="flex-direction:column;align-items:flex-start;">
-      <label>Processing FPS: <span id="fpsVal">5</span></label>
-      <input id="fps" type="range" min="2" max="12" step="1" value="5">
+    <div class="card">
+      <div class="row">
+        <div>
+          <div>Dashboard</div>
+          <div class="muted">Open verification view</div>
+        </div>
+        <button id="openDash" class="btn">Open</button>
+      </div>
     </div>
+  </div>
 
-    <div class="row" style="flex-direction:column;align-items:flex-start;">
-      <label>Red Threshold (%): <span id="redVal">60</span></label>
-      <input id="red" type="range" min="40" max="90" step="1" value="60">
-    </div>
-
-    <p class="hint">Works on most pages with &lt;video&gt; tiles. No cloud uploads.</p>
-
-    <div class="row">
-      <button id="apply">Apply</button>
-      <button id="reset">Reset Defaults</button>
-    </div>
-
-    <script src="popup.js"></script>
-  </body>
+  <script src="popup.js"></script>
+</body>
 </html>
